<resources>
    <string name="app_name" translatable="false">ToDoApp</string>
    <string name="new_task">New task</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="no_tasks_yet">No tasks yet</string>
    <string name="no_tasks_yet_summary">Add your tasks to\ntrack them</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="up">Up</string>
    <string name="done">Done</string>
    <string name="warning">Warning</string>
    <string name="all_tasks_completed">All tasks completed!</string>
    <string name="search">Search</string>
    <string name="select_date">Select date</string>
    <string name="calendar">Calendar</string>
    <string name="select_time">Select time</string>
    <string name="clock">Clock</string>
    <string name="ok">OK</string>
    <string name="date_pattern">MM.dd.yyyy</string>
...
    <string name="datetime_24hour_pattern">EEE, MMM d \'at\' HH:mm</string>
    <string name="datetime_today_24hour_pattern">\'Today at\' HH:mm</string>
    <string name="datetime_tomorrow_24hour_pattern">\'Tomorrow at\' HH:mm</string>
    <string name="datetime_year_24hour_pattern">EEE, MMM d, yyyy \'at\' HH:mm</string>
    <string name="notification_channel">Task reminder</string>
    <string name="task_deleted">Task deleted</string>
    <string name="undo">UNDO</string>
    <string name="clear">Clear</string>
    <string name="todoapp_widget_description">Manage today\'s uncompleted tasks</string>
    <string name="there_are_no_tasks_for_today">There are no tasks for today</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="vk_id">VK ID</string>
    <string name="sign_in_with_your_vk_id">Sign in with your VK ID</string>
    <string name="sign_out">Sign out</string>
    <string name="do_you_really_want_to_sign_out">Do you really want to sign out?</string>
    <string name="show_statistics">Show statistics</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate us</string>
    <string name="tell_a_friend">Tell a friend</string>
    <string name="about_developer">About developer</string>
    <string name="version">Version %s</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="tell_a_friend_text">
        Hi! 👋\n\nI want to recommend you a cool app that helps me not to forget important things — ToDoApp.\n\nSimple, convenient and without unnecessary things — just right for everyday tasks ✅\n\nDownload and try:\n📲https://www.rustore.ru/catalog/app/io.github.mamedovilkin.todoapp
...
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <plurals name="you_have_tasks_to_do">
        <item quantity="one">You have task to do!</item>
        <item quantity="other">You have %d tasks to do!</item>
    </plurals>
    <string-array name="congratulations">
        <item>Well done!</item>
        <item>Perfect!</item>
        <item>Excellent!</item>
...
